<resources>
    <string name="app_name">My Stock</string>
    <string name="title_home">Home</string>
    <string name="title_about">Sobre</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login_text">Faça o login para continuar</string>
    <string name="bem_vindo">Bem-Vindo!</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="total_products">Total de 50 produtos</string>
    <string name="list_of_products">Lista de Produtos</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="nome_do_produto">Nome do Produto</string>
</resources>