<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        android:padding="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_mystock_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:paddingTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="24dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/black"
            android:hint="@string/usuario"
            android:layout_marginTop="36dp"
            app:hintEnabled="true"
            app:boxStrokeColor="@color/blue_bg_darker"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/baseline_account_circle_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/black"
            android:hint="@string/senha"
            android:layout_marginTop="20dp"
            app:hintEnabled="true"
            app:boxStrokeColor="@color/blue_bg_darker"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/outline_lock_24"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToMain"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textStyle="bold"
            app:backgroundTint="@color/blue_button"
            >

        </com.google.android.material.button.MaterialButton>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>