<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="116dp"
            android:layout_height="125dp"
            android:layout_marginTop="1dp"
            android:src="@mipmap/ic_mystock_bg" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_products"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/list_of_products" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pesquisar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/baseline_search_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:hint="@string/pesquisar" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@drawable/linear_layout_clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_gallery"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/nome_do_produto" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@drawable/linear_layout_clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_gallery"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/nome_do_produto" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@drawable/linear_layout_clickable_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_gallery"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/nome_do_produto" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>